<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_postprocess</name>
  <version>0.0.0</version>
  <description>This repository subscribe the JointTrajectoryControllerState topics, calibrate the joint angles, and then publish the JointTrajectoryPoint topics.</description>
  <maintainer email="p76124605@gs.ncku.edu.tw">otischung</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>